--- a/acceuil.css
+++ b/acceuil.css
@@ -8,7 +8,7 @@ body{
 /**SPINNER**/
 
 svg{
-  
+  align-self: center;
   position: fixed;
   top: 40%; left: 30%;
   width: 150px;
@@ -75,23 +75,36 @@ svg circle{
 
 
 /**HEADER**/
+header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.logo{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 .svg-logo{
-    width: 50%;
-    margin-left: 22vw;
+    display: flex;
+    width: 70%;
+    height: auto;
     margin-bottom: 1vh;
 }
 
 .location{ 
+    display: flex;
+    position: relative;
+    justify-content: center;
     width: 100%;
-    margin-top: -2vh;
+    height: 50px;
     background-color: #eaeaea;
     box-shadow:  0 -2px 4px #BEBEBE;
 }
 
 .location p{
-    width: 50%;
-    padding-top: 10px;
-    margin-left: 32vw;
+    display: flex;
+    padding-top: 0;
     font-weight: 500;
     height: 6vh;
 }
@@ -101,9 +114,12 @@ svg circle{
 }
 
 .info-header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: #f6f6f6;
     width: 100%;
-    height: auto;
+    height: 33vh;
     margin-top: -5vw;
     padding-top: 5px;
 }
@@ -125,8 +141,8 @@ svg circle{
 
 /**HEADER BTN**/
 .header-btn{
-    margin-top: 2vh;
-    margin-left: 22vw;
+    align-self: center;
+    margin-top: 0vh;
 }
 .explore-btn{
     font-size: 14px;
@@ -147,27 +163,38 @@ svg circle{
 
 /**NAV**/
 nav{
-    padding-bottom: 0;
+    padding-bottom: 0vh;
+    margin-bottom: 0vh;
 }
 nav h2{
     font-size: 20px;
-    margin-left: 5vw;
+    margin-left: 2vw;
+}
+.working{
+    display: flex;
+    flex-direction: column;
 }
 .working-cards{
+    display: flex;
+    flex-direction: column;
     border: 2px solid transparent;
     border-radius: 20px;
     margin-bottom: 3vh;
-    margin-left: 7vw;
     text-align: center;
     width: 85%;
     height: 60px;
     background-color: #f6f6f6;
     box-shadow: 0 3px 10px #CDCDCD;
+    align-items: center;
+    align-self: center;
 }
 .working-cards p{
     width: 100%;
-    margin-top: -5vh;
+    display: block;
+    margin-top: -3.5vh;
     font-weight: 600;
+    display: flex;
+    justify-content: center;
 }
 
 .working-cards:hover{
@@ -182,48 +209,53 @@ nav h2{
     width: 4%;
     color: #757575;
     margin-right: 4vw;
-    margin-left: -10vw;
+    margin-left: 0vw;
 }
 .working i:hover{
     color: #9356DC;
     
 }
 .number{
-    width: 100%;
+    display: flex;
+    align-self: flex-start;
+    justify-content: center;
     color: #fff;
     background-color: #9356DC;
     border: 1px solid #9356DC;
     border-radius: 20px;
-    width: 6vw;
-    height: 23px;
+    width: 24px;
+    height: 24px;
     text-align: center;
-    margin-left: -5vw;
     font-weight: 400;
     font-size: 15px;
+    margin-left: -3vw;
 }
 
 
 /**SECTION**/
 section{
-    
+    display: flex;
+    flex-direction: column;
     background-color: #f6f6f6;
     height: auto;
 }
 
 .restaurant-title{
-    margin-top: 7vh;
-    padding-top: 3vh;
-    margin-left: 4vw;
+    margin-top: 0vh;
+    padding-top: 0vh;
+    margin-left: 2vw;
 }
 
 .places,.places-2{
-    margin-left: 5vw;
+    position: relative;
+    margin-left: 10vw;
    
 }
 
 .places-cards{
     display: flex;
     flex-direction: column;
+    align-self: center;
     border: 2px solid transparent;
     background-color: #fff;
     border-radius: 15px;
@@ -231,7 +263,7 @@ section{
     height: auto;
     margin-bottom: 3vh;
     box-shadow: 0 3px 10px #CDCDCD;
-    margin-left: 2.5vw;
+    margin-left: 0vw;
 }
 
 .places-img{
@@ -241,6 +273,7 @@ section{
 }
 
 .places-details{
+    
     color: #000;
     line-height: 0;
     margin-left: 2vw;
@@ -250,8 +283,9 @@ section{
     transition: 0.4s;
 }
 .icons{
+    right: 20%;
     position: absolute;
-    margin-left: 67vw;
+    margin-left: 0vw;
     margin-top: -5vh;
     font-size: 21px;
 }
@@ -263,14 +297,15 @@ section{
 }
 
 .places__effect{
-    
-    position: absolute;
-    margin-left: 48vw;
-    margin-top: -30vh;
-    width: 25%;
-    height: auto;
-    background-color: #99E2D0;
-    border-radius: 3px 3px;
+display: flex;
+height: auto;
+background-color: #99E2D0;
+border-radius: 3px 3px;
+width: 90px;
+position: absolute;
+right: 17%;
+margin-top: -23vh;
+margin-right: 1vw;
 }
 
 .effect__p{
@@ -278,13 +313,14 @@ section{
     font-size: 15px;
     font-weight: bold;
     color: #008766;
-    margin-left: 4vw;
+    text-align: center;
 }
 
 
 /**FOOTER**/
 footer{
-    height: auto;
+    margin-top: -3vh;
+    height: 16vh;
     background-color: #353535;
     color: #fff;
    
@@ -298,7 +334,6 @@ footer a{
     font-size: 19px;
     font-weight: lighter;
     margin-left: 10vw;
-    padding-top: 0.1vh;
 }
 
 .footer-details{
@@ -308,7 +343,7 @@ footer a{
 }
 
 .end i{
-margin-right: 2vw;
+margin-right: 0vw;
 }
 
 
@@ -319,7 +354,6 @@ margin-right: 2vw;
     /**MEDIA SPINNER TAB**/
 
     svg{
-  
         position: fixed;
         top: 40%; left: 37%;
         width: 150px;
@@ -330,109 +364,44 @@ margin-right: 2vw;
       body{
         background: #fff ;
       }
+
     /**MEDIA HEADER**/ 
 
-    .logo{
-    
-    border-radius: 20px 20px 0 0;
-    width: 85%;
-    background-color: #fff;
-    }
-    .svg-logo{
-        margin-top: 1vh;
-        margin-left: 27vw;
-    }
     .location{
-        margin-top: -1.5vh;
-        width: 82%;
-        height: 6vh;
-        margin-left: 4vw;
-        border-radius: 20px 20px;
+        
     }
-    .location p{
-        margin-left: 33vw;
-    }
-
-    .info-header{
-        width: 82%;
-        margin-left: 4vw;
-        margin-top: -1.5vh;
-        border-radius: 0 0 20px 20px;
-    }
+    
     .info-title{
-        margin-left: 0vw;
-        margin-top: -2vh;
-        font-size: 18px;
+        font-size: 21px;
     }
 
     .info-details{
-        font-size: 17px;
-        margin-top: -1vh;
-        margin-left: 0vw;
-    }
-
-    .explore-btn{
-        width: 25vw;
-        margin-left: 6vw;
-        margin-top: -2vh;
-    }
-
-    /**MEDIA NAV**/
-    nav{
-        background-color: #fff;
-        width: 85%;
-        height: 32vh;
-        margin-left: 6vw;
-        border-radius: 20px 20px;
-        padding-bottom: 3vh;
-    }
-    nav h2{
-        font-size: 19px;
-        margin-left: 5vw;
-        padding-top: 1vh;
-    }
-
-    .working-cards{
-        margin-left: 15vw;
-        width: 65%;
-        align-content: center;
-    }
-
-    .working-cards p{
         font-size: 18px;
-        margin-top: -3.8vh;
+        
+    }
+    
+    /**MEDIA NAV**/
+    .working-cards p{
+        font-size: 19px;
     }
 
-    .number{
-        margin-left: -2vw;
-        width: 3.5vw;
-        height: 2.5vh;
-    }
 
     /**MEDIA SECTION**/
 
     section{
-        width: 82%;
-        height: 48vh;
-        border-radius: 20px 20px;
-        margin-left: 4vw;
-        margin-top: -5vh;
-    }
-    section h3{
-        margin-left: 4vw;
-        margin-top: -2vh;
+        height: 55vh;
     }
     .places{
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-around;
         flex-direction: row;
-        margin-left: 1vw;
+        margin-left: 0;
     }
     .places-2{
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-around;
         flex-direction: row;
-        margin-left: 1vw;
+        margin-left: 0;
     }
     .restaurant-title{
         font-size: 17px;
@@ -440,50 +409,64 @@ margin-right: 2vw;
     }
     
     .places-cards{
+        display: flex;
         margin-bottom: 3vh;
-        width: 35vw;
-        height: 17vh;
+        width: 45vw;
+        height: 19vh;
     }
     .places-img{
-        width: 35vw;
+        object-fit: cover;
+        width: 100%;
         height: 11vh;
     }
 
     .icons{
+        position: relative;
+        left: 90%;
         width: 2vw;
         height: 2vh;
-        margin-left: 28vw;
         margin-top: -3.8vh;
     }
 
     .places__effect{
+        position: relative;
         width: 10vw;
         height: 3vh;
-        margin-left: 22vw;
-        margin-top: -16vh;
+        float: right;
+        margin-top: -15vh;
+        margin-right: -3vw;
     }
 
     .effect__p{
-        margin-left: 1vw;
+       align-self: center;
     }
 
 
     /**FOOTER TABLETTE**/
 
     footer{
-        width: 82%;
-        height: 25vh;
-        margin-left: 4vw;
-        margin-top: 1vh;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        margin-left: 0;
         margin-bottom: 2vh;
         border-radius: 20px 20px;
     }
+    .footer-header{
+        align-self: flex-start;
+        padding-top: 0.1vh;
+        margin-bottom: 0;
+        margin-left: 2vw;
+        font-size: 21px;
+    }
     .footer-details{
         display: flex;
-        justify-content: space-around;
-        flex-direction: row;
-        margin-left: 0vw;
-        margin-top: 2vh;
+        align-self: flex-start;
+        font-size: 19px;
+        flex-direction: column;
+        margin-left: 2vw;
+        margin-top: -3vh;
     }
 }
 
@@ -505,123 +488,40 @@ svg{
         background: #fff;
     }
     /**DESKTOP HEADER**/
-.logo{
- border-radius: 20px 20px 0 0;
- margin-left: 25vw;
- margin-bottom: -3vh;
- background-color: #fff;
-}
-
-.svg-logo{
-    width: 20%;
-    margin-left: 15vw;
-    margin-top: 2vh;
-}
-
-.location{
-    margin-top: 3vh;
-    margin-left: 25vw;
-    width: 50vw;
-    height: 7vh;
-    border: 20px 20px ;
-}
-
-.location p{
-    margin-bottom: 10vh;
-    margin-left: 19vw;
-    font-size: 18px;
-}
-
-.info-header{
-    width:50vw;
-    margin-left: 25vw;
-    border-radius: 0 0 20px 20px;
-}
-.info-title{
-    margin-left: -1vw;
     
-}
-
-.info-details{
-    margin-left: 0vw;
-}
-
-.explore-btn{
-    width: 15vw;
-    margin-left: -6vw;
-    font-weight: bold;
-}
-
+    .svg-logo{
+        width: 50%;
+    }
+    .explore-btn{
+        width: 100%;
+    }
 /**DESKTOP NAV**/
-nav{
-    border-radius: 20px 20px;
-    margin-top: 0vh;
-    background-color: #fff;
-    width: 50vw;
-    height: 35vh;
-    margin-left: 25vw;
-    margin-top: -0.7vh;
-}
-nav h2{
-    margin-left: 5vw;
-}
-.working-cards{
-    width: 20vw;
-    margin-left: 15vw;
-}
+    
+  .working-cards{
+      width: 55%;
+  }
 
-.working-cards p{
-    margin-top: -5vh;
-    margin-left: 6vw;
-}
-
-.working-cards i{
-    margin-right: 2vw;
-}
-
-.number{
-    width: 1.8vw;
-    height: 3.5vh;
+    .number{
     margin-left: -1vw;
     align-content: center;
-    line-height: 3.5vh;
+    line-height: 1.5vh;
 }
 
 /**SECTION DESKTOP**/
 
-section{
-    height: 65vh;
-    margin-bottom: 0vh;
-    width: 50vw;
-    margin-left: 25vw;
-    margin-top: -6vh;
-    border-radius: 20px 20px;
+.places-cards{
+    width: 35vw;
 }
 
 .restaurant-title{
     margin-left: 1vw;
 }
-.places-cards{
-    width: 18vw;
-    height: 23vh;
-    margin-left:4vw;
-}
 
-.places-img{
-    width: 18vw;
-    height: 15vh;
-}
-
-.icons{
-margin-left: 13vw;
-margin-bottom: 3vh;
-}
 
 .places__effect{
-    width: 5vw;
-    height: 3vh;
-    margin-left: 10.5vw;
-    margin-top: -20vh;
+position: relative;
+
+
 }
 
 .effect__p{
@@ -631,30 +531,8 @@ margin-bottom: 3vh;
 
 /**FOOTER DESKTOP**/
 
-footer{
-    width: 50vw;
-    height: 15vh;
-    margin-left: 25vw;
-    border-radius: 20px 20px;
-    margin-top: 1vh;
-}
-.footer-header{
-    margin-left: 5vw;
-    font-size: 20px;
-}
-.footer-details{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    width: 40vw;
-    margin-top: 0vh;
-    margin-left: 5vw;
-    font-weight: bolder;
-}
-
 .end i{
-    margin-right: 0.2vw;
+    margin-right: 0vw;
 }
 
 }
